--- a/_posts/folder_test/2021-03-08-d.md
+++ b/_posts/folder_test/2021-03-08-d.md
@@ -10,14 +10,12 @@ toc: false
 toc_sticky: false
 ---
 
-
 > ### https://programmers.co.kr/learn/courses/30/lessons/17676
 
 <hr>
 
-## 문제 풀이
+## 아이디어
 
-> ### 아이디어
 1. 주어진 로그 문자열 리스트를 시간 데이터로 모두 파싱해야합니다.
 2. 따라서 strptime 함수를 사용해 로그가 끝난 시간(end)을 시간 데이터로 파싱합니다.
 3. 그리고 처리시간을 끝난 시간에서 빼주면 시작 시간(start)이 나옵니다.
@@ -32,15 +30,12 @@ toc_sticky: false
 12. 해당 리스트의 max 값이 정답이므로 반환합니다.
 13. 문자열을 시간으로 파싱하는 방법과 구간 검사 방법이 매우 중요한 문제였습니다.
 
-<br>
+## 알게 된 함수/방법
 
-> ### 알게 된 함수/방법
 - `datetime.strptime('문자열', '형식')` : 문자열을 시간 데이터로 파싱
 - `datetime.timedelta('시간단위' = '추가할 시간')` : 숫자 자료형을 원하는 시간단위로 시간 데이터로 파싱
 
-<br>
-
-> ### 정답 코드
+## 정답 코드
 
 ```python
 from datetime import datetime, timedelta
