style : 커스텀 테마 변경

--- a/_posts/folder_project/PleaseGraduate/2021-03-10-test.md
+++ b/_posts/folder_project/PleaseGraduate/2021-03-10-test.md
@@ -1,5 +1,5 @@
 ---
-title:  "PG 잘 만들어졌나"
+title:  "졸업요건 사이트 Please Graduate 배포까지의 도전기"
 date: 2021-03-10
 categories:
   - PG
@@ -10,4 +10,22 @@ toc: false
 toc_sticky: false
 ---
 
-# PG 올릴예정~
+이 Please Graduate 게시판의 첫 글로는 프로젝트의 이야기가 있어야 할 것 같다는 생각이 들었다.
+글을 쓰는 재능이 없어서 걱정이지만 ㅜ 내가 가장 열정적으로 개발했던 프로젝트 내용을 포스팅하기 전에 역사를 써보고 싶어서...
+아직 최종 서비스 배포는 완료되지 않았지만 중간에 이렇게 기록을 남겨본다.
+
+## 시작
+
+우선 Please Graduate 사이트는 나 혼자 만든 사이트가 아니다.
+이 프로젝트는 학교 프로그램인 `창의학기제`에서부터 시작됐다.
+창의학기제는 동기 두명과 후배 두명, 그리고 나까지 총 5명이서 3주간 자유 주제로 뭐든지 만들어 내는 프로그램이었다.
+3주라는 기간이 너무 애매해서 다 같이 머리를 꽁꽁 싸매고 어떤 프로젝트를 해볼까 고민하다가 한 후배가 아이디어를 냈다.
+세종대학교 학생들의 졸업요건을 자동으로 검사해주는 사이트를 만들어보자는 것이다.
+
+우리 학교는 졸업요건이 매우 까다롭다.(다른 학교도 그럴수도 있음)
+졸업하기 위해서 체크해야하는 영역으로 전공필수, 전공선택, 교양필수, 교양선택, 기초교양, 영어인증, 고전독서인증, 공학인증이 있고, 총 8개나 된다..!
+각 영역마다 기준 학점을 채워야하고, 또 영역마다 들어야하는 필수과목들도 정해져 있다.
+그 뿐만 아니라 교양선택 영역의 경우엔 무슨 선택영역도 세 가지 이상을 채워야 하는 등 알기 힘든 기준들이 많다.
+게다가 특정 영역은 나의 이수현황을 확인할 수 있는 사이트가 또 달라서 일일히 찾아봐야 한다.
+
+... 작성중 ...
