--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -11,7 +11,7 @@ toc_sticky: false
 ---
 
 
-이제 시작이다 !!
+W1D1 - 이제 시작이다 !!
 
 ## Java 기초
 
@@ -66,6 +66,157 @@ toc_sticky: false
 <img width='600' src='https://user-images.githubusercontent.com/71180414/127900809-37429b32-bbc7-4119-871b-fdcd02f54e42.png'>
 
 ### 프로젝트 생성하기
+
+- 커맨드를 입력해서 프로젝트를 생성해보자
+- 설정을 계속 물어보는데 목적에 맞게 선택해주면 된다.
+
+<img width='700' src='https://user-images.githubusercontent.com/71180414/127902593-29efc278-a35d-4e4e-b11b-5def647e4965.png'>
+
+### 폴더 구조
+
+- 이렇게 생성하면 아래처럼 폴더 구조가 잡혀있음
+
+<img width='250' src='https://user-images.githubusercontent.com/71180414/127902914-5dd4d0ea-ab53-477f-91a7-4447afa47f9a.png'>
+
+- `build.gradle` 커맨드 명령어들을 정의하는 파일
+- `src` 하위 폴더들이 실제로 사용하는 폴더임
+- `main` 당연히 메인로직이 동작하는 곳
+- `test` 테스트 코드를 작성하는 곳
+- `resource` asset 파일 넣는곳
+
+### Gradle 명령어 메모
+
+```
+# 프로젝트 생성
+> gradle init
+# 빌드
+> gradle build
+# 실행
+> gradle run
+# task 확인
+> gradle tasks
+```
+
+<br>
+
+## IntelliJ
+
+### 설치 및 프로젝트 생성
+
+- 설치방법은 간단하고 이미 설치했기에 pass
+- 프로젝트 생성도 pass
+
+### 단축키
+
+- Intellij 단축키 보고 완전 꿀이라고 생각했다. 개발 속도를 엄청 향상시켜줄 것 같다.
+- 자주 쓸만한 단축키를 정리해보자 (안써놓으면 100% 까먹음)
+
+|단축키|설명|
+|---|---|
+|psvm|public static void main 만들어줌|
+|sout|System.out.println|
+|Alt + Enter|수정 도우미|
+|Shift + Shift|패키지 검색|
+|Ctrl + W|드래그블록 범위 확장|
+|Ctrl + Shift + W|드래그블록 범위 축소|
+|Ctrl + Alt + L|코드 정렬|
+|Ctrl + Shift + Alt + T|리팩토링 메뉴(중요)|
+|Ctrl + Shift + A|액션 검색|
+
+<br>
+
+## Coding Convention
+
+### 그게 뭐야?
+
+- Team 협업 시 코딩 규칙임
+- 보통 Java 개발자끼리의 암묵적인 Rule을 지켜야 한다.
+
+### 메소드/변수명
+
+- 클래스 첫 글자는 `대문자`, 메소드 첫 글자는 `소문자`
+- `스네이크 케이스` X -> `카멜 케이스` O
+- `들여쓰기` 할땐 Tab과 Space 혼용 금지
+
+<br>
+
+## Reference
+
+- Java에서는 포인터 대신 Reference라는 개념이 있다
+- Java에선 alloc/free를 신경쓰지 않아도 된다.
+- Java에선 8가지를 제외한 모든 것이 레퍼런스이다. 
+  - Primitive value : boolean, byte, int, short, long, float, double, char
+  - Array는 Reference로 취급한다.
+- Call by value :
+- Call by Reference : 
+
+<br>
+
+## Constant Pool
+
+- Java에선 String을 `constant pool` 이라는 공간에 저장하는 방식으로 사용
+
+### 예제 1
+
+```java
+String a = "Hello World";
+String b = "Hello World";
+System.out.println(a == b);
+```
+
+- 위 코드의 결과는 `true`가 나온다.
+- 변수 `a`와 `b`의 값은 똑같기에 `constant pool`에는 "Hello World" 라는 String 하나만 생성되고 문자열을 재활용한다.
+
+### 예제 2
+
+```java
+String a = "";
+for (int i =0 ; i < 10 i++){
+  a += i ;
+}
+```
+
+- 위 코드에서는 빈 String에 늘어나는 값을 하나씩 추가한다.
+- 이 과정에서 내부적으로 `a`라는 변수에 계속 추가되는 것이 아니라 `constant pool`이라는 곳에서 하나씩 추가되는 새로운 문자열이 생성된다.
+ex) "" + "0" + "01" + "012" + ...
+- for문이 끝나면 최종적으로 10개의 문자열이 생성되었을 것이고, 그 중 최종 값이 `a`에 담긴다.
+- 이는 매우 메모리측면에서 비효율적인 방법이므로 사용하지 말자
+
+### 예제 3
+
+```java
+StringBuffer sb = new StringBuffer();
+for (int i =0 ; i < 10 i++){
+  a += i ;
+}
+```
+
+- `StringBuffer`를 사용하면 buffer 공간이 따로 생성된다
+- for 문을 돌 때 예제 2처럼 `constant pool`에 문자열이 계속 저장되지 않고 `StringBuffer`에서 변경되다가 최종 값만이 `constant pool`에 저장된다.
+- 메모리측면에서 매우 효율적!
+
+### StringBuilder vs StringBuffer ?
+
+
+
+<br>
+
+## Object 객체
+
+- 모든 객체의 최상위 객체
+- 따라서 모든 객체는 Object 메소드를 호출 가능
+
+### toString()
+
+### equals()
+
+### hashCode()
+
+
+<br>
+
+
+
 
 
 
