--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -142,13 +142,13 @@ W1D1 - 이제 시작이다 !!
 
 ## Reference
 
-- Java에서는 포인터 대신 Reference라는 개념이 있다
+- Java에서는 포인터 대신 `Reference`라는 개념이 있다
 - Java에선 alloc/free를 신경쓰지 않아도 된다.
 - Java에선 8가지를 제외한 모든 것이 레퍼런스이다. 
-  - Primitive value : boolean, byte, int, short, long, float, double, char
-  - Array는 Reference로 취급한다.
-- Call by value :
-- Call by Reference : 
+  - `Primitive value` : boolean, byte, int, short, long, float, double, char
+  - Array는 `Reference`로 취급한다.
+- Call by value : `Primitive value`로 선언된 값은 메모리 공간 안에 그 값이 저장됨
+- Call by Reference : `Reference value`는 메모리 공간에 실제 값을 가지는 주소를 저장함
 
 <br>
 
@@ -195,9 +195,9 @@ for (int i =0 ; i < 10 i++){
 - for 문을 돌 때 예제 2처럼 `constant pool`에 문자열이 계속 저장되지 않고 `StringBuffer`에서 변경되다가 최종 값만이 `constant pool`에 저장된다.
 - 메모리측면에서 매우 효율적!
 
-### StringBuilder vs StringBuffer ?
+### StringBuilder vs StringBuffer
 
-
+- [포스팅 이동](/java/1/) 
 
 <br>
 
@@ -205,13 +205,7 @@ for (int i =0 ; i < 10 i++){
 
 - 모든 객체의 최상위 객체
 - 따라서 모든 객체는 Object 메소드를 호출 가능
-
-### toString()
-
-### equals()
-
-### hashCode()
-
+- [포스팅 이동](/java/2/) 
 
 <br>
 
