--- a/_posts/study/Java/2021-08-08-2.md
+++ b/_posts/study/Java/2021-08-08-2.md
@@ -26,9 +26,12 @@ java.lang 패키지와 Object 클래스에 대해 알아보자!
 
 - 모든 클래스의 최고 조상 클래스
 - Object 클래스의 멤버는 모든 클래스에서 바로 사용이 가능
-- Object 클래스는 멤버변수는 없고 오직 11개의 메서드만을 가지고 있다.
+- Object 클래스는 멤버변수는 없고 오직 11개의 메소드만을 가지고 있다.
+- 아래에서 기본 메소드들을 알아보자
 
-### equals(Object obj)
+<br>
+
+## equals(Object obj)
 
 - equals 메소드는 객체의 참조변수를 입력받고 비교해 결과를 boolean 값으로 리턴하는 메소드이다.
 
@@ -70,21 +73,46 @@ class Value{
     this.vaule = value;
   }
 
+  // 오버라이딩!!
   public boolean equals(Object obj){
     if(obj instanceof Value)
-      return value == (Value)
+      return value == ((Value)obj).value
     else
       return false
   }
 }
+```
 
-public static void main(){
-  // 1
-  Value v1 = new Value(10);
-  Value v2 = new Value(10);
-  System.out.println(v1.equals(v2));
-  // 2
-  v2 = v1;
-  System.out.println(v1.equals(v2));
+- 이렇게 equals 메소드를 오버라이딩해서 주소값이 아닌 변수 `value`를 직접 비교해줄 수 있다.
+
+<br>
+
+## hashCode()
+
+- 객체의 주소값으로 해시코드를 만들어 반환한다.
+- 32bit JVM에서는 중복되지 않지만 64bit JVM에서는 중복될 수 있음
+
+```java
+String str = "abc";
+str.hashCode();
+```
+
+<br>
+
+## toString()
+
+- 인스턴스에 대한 정보를 문자열로 제공하는 메소드
+
+```java
+// toString Default 모습
+public String toString(){
+  return getClass().getName() + "@" + Integer.toHexString(hashCode());
 }
 ```
+
+- 내부가 이렇게 생겼다. (이래서 그냥 print로 찍으면 해시코드가 나왔구나)
+- 일반적으로 자바에서 제공하는 컬렉션에서 toString은 오버라이딩되어 있기에 print로 찍거나 `.toString()` 메소드를 붙여주면 원하는 값을 볼 수 있다.
+- 하지만 내가 **직접 만든 클래스**라면 직접 오버라이딩을 해줘야 원하는 값을 볼 수 있음
+- Object 클래스에서 toString 메소드는 접근제어자가 public이기 때문에 오버라이딩할때도 public으로 해야한다.
+
+<br>
