--- a/_posts/study/TIL/2021-08-04-4.md
+++ b/_posts/study/TIL/2021-08-04-4.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스] 프레임워크를 위한 Java "
+title:  "[데브코스] Interface 이야기 "
 date: 2021-08-04
 categories:
   - TIL
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-Java를 설계하는 방법에 대해 알아보자!
+어떻게 해야 Interface를 효율적으로 설계할 수 있을까?
 
 ## Interface
 
@@ -48,11 +48,9 @@ Java를 설계하는 방법에 대해 알아보자!
 - 인터페이스가 포함하는 메소드가 여러개여도 추상메소드만 하나면 조건 만족 
 - Annotation (@FunctionalInterface) 를 달아주어 가독성을 좋게 만들자
 
-- Functional Interface의 종류는 여러가지가 있음
-  - Supplier
-  - Mapper
-  - Consumer
-  - Runnable
+- Functional Interface의 종류는 여러가지가 있음 
+  - [포스팅 이동](/java/4/)
+  
 - 어떤 자세한 행위를 할지는 Host Code에서 람다표현식으로 오버라이딩하고 파라미터에 넣어준다.
 
 
@@ -69,6 +67,6 @@ Java를 설계하는 방법에 대해 알아보자!
 
 ## Generic
 
-- Primitve type은 제네릭에 사용 불가 -> Reference type만 가능
+- Primitve type은 제네릭 파라미터로 사용 불가 -> Reference type만 가능
 - 유동적인 파라미터, 리턴 타입 지정할때 사용
 
