--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -198,7 +198,7 @@ for (int i =0 ; i < 10 i++){
 
 ### StringBuilder vs StringBuffer
 
-- [포스팅 이동](/java/1/) 
+- [🚀 포스팅 이동](/java/1/) 
 
 <br>
 
@@ -206,7 +206,7 @@ for (int i =0 ; i < 10 i++){
 
 - 모든 객체의 최상위 객체
 - 따라서 모든 객체는 Object 메소드를 호출 가능
-- [포스팅 이동](/java/2/) 
+- [🚀 포스팅 이동](/java/2/) 
 
 <br>
 
