--- a/_posts/study/TIL/2021-08-03-2.md
+++ b/_posts/study/TIL/2021-08-03-2.md
@@ -142,7 +142,7 @@ Login k = new KakaoLogin();
 - NOOO~ 좋은 원칙이지만 너무 추상적이다. 진짜 설계해보자! 
 - 만들다 보니... 공통점이 생겼다? => `디자인 패턴`의 탄생 😓
 - 그 책이 바로 GoF(Gang of Fours). Design Patterns: Elements of Reusable Object-Oriented Software. _ 1995
-- 총 23가지의 디자인 패턴이 있다. [포스팅 보기](/java/3/)
+- 총 23가지의 디자인 패턴이 있다. [🚀 포스팅 이동](/java/3/)
 
 
 <br>
