--- a/_posts/study/Java/2021-08-02-1.md
+++ b/_posts/study/Java/2021-08-02-1.md
@@ -1,5 +1,5 @@
 ---
-title:  "StringBuilder vs StringBuffer"
+title:  "String vs StringBuffer vs StringBuilder"
 date: 2021-08-02
 categories:
   - Java
