--- a/_posts/study/DesignPattern/2021-08-09-1.md
+++ b/_posts/study/DesignPattern/2021-08-09-1.md
@@ -51,9 +51,19 @@ Factory Method 패턴에 대해 알아보자
 
 <br>
 
-## 왜 사용할까?
+## 추가 정보
 
-- 
+- 위처럼 팩토리 클래스를 `싱글톤`패턴을 사용해 클래스로 구현해도되지만, 그냥 메인에서 `static` 메소드로 구현해도 됨!!
+- Primitive 타입을 감싸는 wrapper class : `Boolean`, `Integer`, `Long` 등의 `valueOf()`가 팩토리 메소드 패턴으로 구현되었다
+
+### 장점
+
+- 객체 간 결합도를 낮추고 DI를 행함으로써 유지보수를 용이하게 하기 위해서! (거의 모든 디자인패턴이 그렇다.)
+- 또한 호스트 코드?에서 객체를 직접 생성하지 않으므로, 객체를 **팩토리 클래스**에서 따로 관리할 수 있다(생명주기 관리 GOOD)
+
+### 단점
+
+- 인터페이스를 상속받는 새로운 하위 클래스가 계속 생겨나면 ... 복잡성 UP
 
 <br>
 
