--- a/_posts/study/DesignPattern/2021-08-09-2.md
+++ b/_posts/study/DesignPattern/2021-08-09-2.md
@@ -51,7 +51,7 @@ Adapter 패턴에 대해 알아보자
 
 <br>
 
-<img src="https://user-images.githubusercontent.com/71180414/128655884-e7bcc90d-690d-4edc-9c86-60ca062a82c6.png">
+<img src="https://user-images.githubusercontent.com/71180414/129078767-4111eab3-73ab-438b-ae37-ecc6962bc269.png">
 
 - 추가하려는 확장자는 기존 시스템에서 사용하던 Player와 호환되지 않아(인터페이스가 다름) Adapter 클래스가 필요하다.
 - 따라서 기존 Player 인터페이스를 상속받는 Adapter 클래스를 만들고,<br>
@@ -60,9 +60,17 @@ Adapter 패턴에 대해 알아보자
 
 <br>
 
-## 왜 사용할까?
+## 추가 정보
 
-- 
+- `Arrays.asList()` 메소드에서 어댑터 패턴을 사용한다고 함 😇
+
+### 장점 
+
+- 메인코드에서 기존 인터페이스를 그대로 사용할 수 있어 많은 수정을 방지할 수 있다! (`OCP` 원칙)
+
+### 단점
+
+- 찾아보니 어댑터 클래스에서 통일 시켜주는 부분을 하나씩 구현해야 하는게 단점이라고 하는데(~~당연한거 아닌가?~~)  딱히 없는것 같다...
 
 <br>
 
