--- a/_posts/study/DesignPattern/2021-08-09-3.md
+++ b/_posts/study/DesignPattern/2021-08-09-3.md
@@ -47,13 +47,22 @@ Memento 패턴에 대해 알아보자
 - `Orginator` : 데이터를 담는 원본 클래스이며, 복사본(Memento)을 만들거나 저장하는 메소드를 가진다.
 - `Memento` : 원본과 같은 구조를 가지는 복사본 클래스.
 - `CareTaker` : 스택 구조를 활용해 복사본을 쌓는다. (선입선출이므로 복원 시 바로 전 복사본을 pop하게 됨)
-- `Orginator`에 의해서만 복사본을 생성/복원할 수 있으므로 캡슐화를 지키는 것!
 
 <br>
 
-## 왜 사용할까?
+## 추가 정보
 
-- 
+- redo/undo를 지원하는 커맨드 패턴과 자주 쓰인다고 한다
+
+### 장점
+
+- 복사본을 쌓는 스택은 `CareTaker` 클래스에서 수행하고, 복사본 생성/복원의 동작은 `Orginator`가 수행하므로 캡슐화가 지켜진다!
+
+### 단점
+
+- 상태추적 대상 객체의 크기가 매우 크다면 복사본 크기 또한 크다. -> 메모리 낭비로 이어질 수 있음
+  - 객체 생성/삭제가 잦거나 객체 내부가 매우 복잡하다면 사용하지 말자
+- 클라이언트 단에서 메멘토 객체에 접근이 아예 불가능해서 어떤 상황인지 아예 모른다.
 
 <br>
 
