--- a/_posts/study/TIL/2021-08-11-9.md
+++ b/_posts/study/TIL/2021-08-11-9.md
@@ -30,7 +30,7 @@ RDS MySQL에 접속하고 SELECT문 실습~
 ```sql
 SELECT [DISTINCT] 필드명
 FROM 테이블명
-JOIN 필드명 ON 기준설정(키값매핑)
+JOIN 테이블명 ON 기준설정(키값매핑)
 WHERE 조건
 GROUP BY 필드명1, 필드명2
 ORDER BY 필드명 [ASC|DESC]
