--- a/_posts/study/TIL/2021-08-11-9.md
+++ b/_posts/study/TIL/2021-08-11-9.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-RDS MySQL에 접속하고 SELECT문 실습~
+W2D3 - RDS MySQL에 접속하고 SELECT문 실습~
 
 실습하다보니 문법 다 까먹어서 좀 정리해두려고 한다...
 
@@ -64,7 +64,7 @@ CASE
     WHEN 조건1 THEN 값2
     WHEN 조건2 THEN 값2
     ELSE 값3
-END 새로운 필드이름
+END AS 새로운 필드이름
 FROM 테이블명
 ```
 
