--- a/_posts/study/TIL/2021-08-13-11.md
+++ b/_posts/study/TIL/2021-08-13-11.md
@@ -148,7 +148,7 @@ CREATE INDEX 인덱스명 ON 테이블명 (필드명, ...)
 
 <br>
 
-## 느낀점
+## 오늘의 한마디
 
 - 백엔드 개발자는 어디까지 알아야 되는걸까? (자주 접하는 기능이 뭔가)
 - 실무에서 프로시저나 트리거까지 건드리게 될까...?
