--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -122,6 +122,8 @@ W1D1 - 이제 시작이다 !!
 |Ctrl + Alt + L|코드 정렬|
 |Ctrl + Shift + Alt + T|리팩토링 메뉴(중요)|
 |Ctrl + Shift + A|액션 검색|
+|Alt + I (원래 insert)|오버라이딩 단축키(난 i로 바꿈)|
+
 
 <br>
 
