--- a/_posts/study/TIL/2021-08-16-12.md
+++ b/_posts/study/TIL/2021-08-16-12.md
@@ -1,6 +1,6 @@
 ---
 title:  "[데브코스] Spring 개요"
-date: 2021-08-15
+date: 2021-08-16
 categories: 
   - TIL
 
@@ -121,8 +121,8 @@ tasks.getByName<Test>("test") {
 
 ### 의존성 주입 (DI) 
 
-- `컴파일타임` 의존성 : 코드를 작성하는 시점에서 발생하는 의존성 (클래스 사이의 의존성)
-- `런타임` 의존성 : App 실행시 발생하는 의존성 (객체 사이의 의존성) => 뭐.. 행위의 의존성이라고 생각하면 될듯?
+- `컴파일타임 의존성` : 코드를 작성하는 시점에서 발생하는 의존성 (클래스 사이의 의존성)
+- `런타임 의존성` : App 실행시 발생하는 의존성 (객체 사이의 의존성) => 뭐.. 행위의 의존성이라고 생각하면 될듯?
 
 
 <br>
@@ -142,11 +142,17 @@ public record 클래스명(
 ) {}
 ```
 
+- `Assert`는 스프링에서 지원하는 조건식임 `Assert.isTrue(조건식, 거짓이라면실행)`
+
+
+
 <br>
 
-## 오늘의 한마디
+## 📢 오늘의 한마디
 
-- 스프링 시작 첫 강의를 들으니... 앞으로 험난한 길이 예상된다 😭😢
+- 스프링 시작 첫 강의를 듣고나서... 
+  - 앞으로 험난한 길이 예상된다 😭😢
+  - 절대 초보인 나를 배려하지 않는다. 알아서 쫓아가야 한다
 - 고수의 향기가 느껴지는 코딩... 난생 처음보는 문법들... 정신이 혼미하다 🤮
 - 강의 중 모르는게 나오면 구글링하면서 알아가며 하다보니 시간이 오래걸린다
 - 간단한 주문 도메인 구현하면서 공부했었던 디자인패턴의 향기가 느껴져서 반가웠다. (정리할거 20개 남음 ^^;)
