--- a/_posts/study/Spring/2021-08-18-1.md
+++ b/_posts/study/Spring/2021-08-18-1.md
@@ -47,6 +47,49 @@ toc_sticky: false
     - `GenericXmlApplicationContext` : xml 기반 구현체 생성
     - `AnnotationConfigApplicattionContext` : 어노테이션 기반 구현체 생성
 
+### Circular Dependency
+
+- IoC 컨테이너 내의 Bean들은 서로 참조가 가능하다.
+- 하지만 순차적으로 참조하는 것이 아닌 순환하여 참조하게 된다면 오류가 발생한다
+
+<br>
+
+
+## Streotype Annotation
+
+- 어노테이션을 달아놓은 객체(?)를 컴포넌트라고 칭한다
+
+- `@Configuration` : App Context(IoC 컨테이너)로 등록하기
+- `@Bean` : 
+- `@ComponentScan` : 
+    - `@ComponentScan(basePackages = {"패키지명", ...}`
+    - `@ComponentScan(basePackageClasses = {클래스, ...})`
+- `@Service` : 
+- `@Repository` : 
+
+<br>
+
+## Auto Wired
+
+- 스프링의 ComponentScan 사용시 Bean을 직접 지정하지 않는다.
+- 따라서 Bean에서 직접 의존관계 주입해주던 방식을 자동화해주는 Auto Wired 기능이 등장.
+- `Component`로 등록된 파일 내에서 생성자에 `@Autowired` 어노테이션을 붙여준다.
+    - 초기화시 필요한 모든 의존관계가 형성됨
+    - 잘못된 패턴을 찾을 수 있도록 도와줌
+    - 테스트를 쉽게 해줌
+    - 불변성을 확보
+- 만약 생성자와 관련된 Bean이 두개 이상이라면? => 해당 Bean에 어노테이션을 달아줘야함.
+    - `@Primary` : 가장 우선이 되는 Bean을 뜻함
+    - `@Qualifier("별명")` : Bean 파일에서 별명 설정 후, 생성자에서 명시해줘야함
+
+<br>
+
+## Bean Scope
+
+- 총 6개의 Bean Scope가 존재함
+    - `singleton`, `prototype`, `request`, `session`, `application`, `websocket`
+- 기본적으로 싱글톤 스코프를 가진다.
+
 <br>
 
 ## AOP
