--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -116,6 +116,7 @@ W1D1 - 이제 시작이다 !!
 |psvm|public static void main 만들어줌|
 |sout|System.out.println|
 |Alt + Enter|수정 도우미|
+|Ctrl + Space|추천 도우미|
 |Shift + Shift|패키지 검색|
 |Ctrl + W|드래그블록 범위 확장|
 |Ctrl + Shift + W|드래그블록 범위 축소|
