--- a/_posts/study/TIL/2021-08-17-13.md
+++ b/_posts/study/TIL/2021-08-17-13.md
@@ -1,6 +1,6 @@
 ---
 title:  "[데브코스] IoC, DDD, DI"
-date: 2021-08-16
+date: 2021-08-17
 categories: 
   - TIL
 
@@ -26,6 +26,12 @@ W3D2 - IoC, DDD, DI에 대해 공부해보자
 - `Configuration MetaData` : Bean 객체 생성시 메타데이터를 ApplicationContext로부터 받아오는 것
     - `GenericXmlApplicationContext` : xml 기반 구현체 생성
     - `AnnotationConfigApplicattionContext` : 어노테이션 기반 구현체 생성
+
+### Circular Dependency
+
+- IoC 컨테이너 내의 Bean들은 서로 참조가 가능하다.
+- 하지만 순차적으로 참조하는 것이 아닌 순환하여 참조하게 된다면 오류가 발생한다
+
 
 <br>
 
