--- a/_posts/study/TIL/2021-08-18-14.md
+++ b/_posts/study/TIL/2021-08-18-14.md
@@ -33,11 +33,12 @@ W3D3 - Component Scan / Auto Wired / Bean Scope 를 공부해보자
 
 - 스프링의 ComponentScan 사용시 Bean을 직접 지정하지 않는다.
 - 따라서 @Bean으로 직접 의존관계 주입해주던 방식을 자동화해주는 Auto Wired 기능이 등장.
-- 컴포넌트로 등록된 파일 내에서 생성자에 `@Autowired` 어노테이션을 붙여준다.
+- 컴포넌트로 등록된 파일 내의 메소드에 `@Autowired` 어노테이션을 붙여준다.
     - 초기화시 필요한 모든 의존관계가 형성됨
     - 잘못된 패턴을 찾을 수 있도록 도와줌
     - 테스트를 쉽게 해줌
     - 불변성을 확보
+- `@Autowired` 생략시 생성자에 자동으로 어노테이션이 붙는다.
 - 만약 생성자와 관련된 Bean이 두개 이상이라면? => 해당 Bean에 어노테이션을 달아줘야함.
     - `@Primary` : 가장 우선이 되는 Bean을 뜻함
     - `@Qualifier("별명")` : Bean 파일에서 별명 설정 후, 생성자에서 명시해줘야함
