--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -121,6 +121,7 @@ W1D1 - 이제 시작이다 !!
 |Ctrl + W|드래그블록 범위 확장|
 |Ctrl + Shift + W|드래그블록 범위 축소|
 |Ctrl + Alt + L|코드 정렬|
+|Shift + Tab|왼쪽 정렬|
 |Ctrl + Shift + Alt + T|리팩토링 메뉴(중요)|
 |Ctrl + Shift + A|액션 검색|
 |Alt + I (원래 insert)|오버라이딩 단축키(난 i로 바꿈)|
