--- a/_posts/study/TIL/2021-08-24-18.md
+++ b/_posts/study/TIL/2021-08-24-18.md
@@ -48,6 +48,7 @@ try (
 - 이를 방지하기 위해선 `PreparedStatement`를 사용해야함
 - `PreparedStatement`를 사용하면 **DB 연결 -> statement 생성 -> 쿼리** 이 3단계를 캐시에 저장한다.
     - 캐시를 통한 성능 향상
+    - PlacelHolder를 통해 변동적 쿼리 생성
     - 입력값에 의해 쿼리가 변경되는 상황이 방지
 
 ```java
