style : 디자인 공사

--- a/_posts/study/TIL/2021-08-16-12.md
+++ b/_posts/study/TIL/2021-08-16-12.md
@@ -82,7 +82,7 @@ tasks.getByName<Test>("test") {
 
 ## Spring Boot CLI 설치하기
 
-- [여기](https://docs.spring.io/spring-boot/docs/current/reference/html/getting-started.html#getting-started.installing.cli)에서 각자에게 맞는 설치 방법을 선택해 설치해주자.
+- [여기](https://docs.spring.io/spring-boot/docs/current/reference/html/getting-started.html#getting-started.installing.cli){:target="_blank"}에서 각자에게 맞는 설치 방법을 선택해 설치해주자.
   - 나는 아래와 같이 zip 파일로 다운받았다.
 
 ![image](https://user-images.githubusercontent.com/71180414/129485148-5d1e3cf9-87f0-4ad2-9c76-c42fbcef14a1.png){: width="500"}
@@ -110,7 +110,7 @@ tasks.getByName<Test>("test") {
 
 - 기본을 Spring Framework 라고 부르고, 여러가지 모듈(프로젝트)이 있는데 Dependency를 추가하여 하나씩 붙일수 있다 
 - Spring Boot는 이런 모듈을 붙이는 설정을 쉽게 해주는 것!!
-- [공식사이트 모듈 설명](https://spring.io/projects/spring-framework)
+- [공식사이트 모듈 설명](https://spring.io/projects/spring-framework){:target="_blank"}
 
 ### 도메인
 
