--- a/_posts/study/TIL/2021-08-20-16.md
+++ b/_posts/study/TIL/2021-08-20-16.md
@@ -38,7 +38,7 @@ W3D5 - Logging 프레임워크 / Logback + 지금까지 실습을 Spring Boot로
     3. `logback.xml`
     4. 기본설정(BasicConfiguration)
 - 설정파일 위치는 resource 폴더 하위임 
-- `logback.xml` 기본 설정은 [여기](http://logback.qos.ch/manual/configuration.html)에서 복붙하면 된다.
+- `logback.xml` 기본 설정은 [여기](http://logback.qos.ch/manual/configuration.html){:target="_blank"}에서 복붙하면 된다.
 - 추가적인 포맷 정보도 공식 문서에서!
 
 <br>
@@ -59,7 +59,7 @@ W3D5 - Logging 프레임워크 / Logback + 지금까지 실습을 Spring Boot로
 
 ### Banner
 
-- [여기](http://patorjk.com/software/taag/#p=display&f=Graffiti&t=Type%20Something%20)에서 스프링부트 시작시 출력되는 배너를 커스텀할 수 있다
+- [여기](http://patorjk.com/software/taag/#p=display&f=Graffiti&t=Type%20Something%20){:target="_blank"}에서 스프링부트 시작시 출력되는 배너를 커스텀할 수 있다
 - `resource` 폴더 밑에 `banner.txt`를 만들고 생성한 배너를 복붙해주기만 하면 된다
 
 ### Logging
