--- a/_posts/study/TIL/2021-08-26-20.md
+++ b/_posts/study/TIL/2021-08-26-20.md
@@ -98,7 +98,7 @@ anEmbeddedMysql(mysqlConfig)
 ![image](https://user-images.githubusercontent.com/71180414/130952855-48e21614-fd8b-4b2f-b06e-7502b421b8fc.png){:width="800"}
 
 - 매우 화가난다 `v8_0_11`로 실행하니 이런 오류가 뜨면서 실행이 안됨
-- [여기](https://github.com/wix/wix-embedded-mysql/issues/157)를 참고하니... 윈도우에서 C++ 패카지가 설치되어 있지 않을때 발생하는 오류라고 함
+- [여기](https://github.com/wix/wix-embedded-mysql/issues/157){:target="_blank"}를 참고하니... 윈도우에서 C++ 패카지가 설치되어 있지 않을때 발생하는 오류라고 함
     - ~~나는 깔려있는데도 오류가 뜬다. 해결불가..~~
 
 <br>
