chore : 폴더구조 변경

--- a/_posts/study/TIL/2021-08-27-21.md
+++ b/_posts/study/TIL/2021-08-27-21.md
@@ -19,15 +19,24 @@ W4D5 -
 - OOP를 대신하는 개념이 아닌, OOP를 더욱 잘 활용하게 해주는 개념이다.
 - 핵심기능과 부가기능을 분리하여 관리하는 것.
 
-### 기본 용어
+### 기본 구조
 
-- `Concern` : 각기 다른 클래스에서 비슷한 기능을 하는 부분들을 뜻한다. (메소드 등)
-- `Aspect` : 기존 뜻은 '관점'이지만 -> '기능'을 묶는 모듈이라고 생각하면 좋다
+- [참고블로그(그림으로 이해)](https://velog.io/@max9106/Spring-AOP%EB%9E%80-93k5zjsm95){:target="_blank"}
 
 ![image](https://user-images.githubusercontent.com/71180414/131093439-92a801f6-ce51-4385-ad81-ab1fe4970362.png){:width="600"}
 
-- `Cross Cutting Concerns` : 기능이 중복되는 부분이다. 이 부분을 `Aspect`로 만들어 주는 것이 바로 AOP!
-- [참고블로그(그림으로 이해)](https://velog.io/@max9106/Spring-AOP%EB%9E%80-93k5zjsm95){:target="_blank"}
+- `(Cross Cutting) Concerns` : 기능이 중복되는 부분이다. 이 부분을 `Aspect`로 만들어 주는 것이 바로 AOP!
+
+<br>
+
+![aop](https://user-images.githubusercontent.com/71180414/131214118-7e3ea8c0-16db-4267-aff3-e67eaba3b0a2.png)
+
+- `Aspect` : 기존 뜻은 '관점'이지만 -> '기능'을 묶는 모듈이라고 생각하면 좋다
+- `Advice` : 기존 Concern을 Aspect 모듈에 넣으면 Advice.
+- `Target` : 핵심 기능을 담고 있는 모듈. 부가기능을 부여할 대상 -> 즉 적용대상 클래스/메소드임
+- `PointCut` : Advice를 적용할 Target의 메소드를 선별하는 `정규표현식`
+- `Join point` : Advice가 Target에 적용되는 시점을 뜻한다
+
 
 <br>
 
@@ -39,16 +48,22 @@ W4D5 -
 - 클래스 로딩 시점 : 클래스 로딩시 Byte Code를 삽입
 - 런타임 시점 : 스프링에서 사용하는 방식으로 `Proxy` 객체를 활용한다 더 알아보자!
 
+### Advice Join Point 분류
+
+![image](https://user-images.githubusercontent.com/71180414/131215026-55584b2b-c625-4f6f-b2f4-2999adb1b781.png){:width="500"}
+
+
 <br>
 
 ## JDK dynamic Proxy
+
+??
 
 <br>
 
 ## Spring AOP 
 
 - aspectJ 어노테이션을 사용하나, 런타임 시점에서 적용됨
-- 
 
 ### 설정
 
@@ -60,3 +75,65 @@ W4D5 -
 	<artifactId>spring-boot-starter-aop</artifactId>
 </dependency>
 ```
+
+### Aspect 클래스 생성
+
+- `@Aspect` 어노테이션을 달아줌
+- 반드시 Bean으로 등록되어야함.
+
+```java
+@Aspect
+@Component
+public class 클래스 {
+	...
+}
+```
+
+### PointCut 설정
+
+- 정규표현식으로 `Advice`가 적용될 범위인 `PointCut`을 설정한다
+- 정규표현식에 와일드카드로 `*`을 사용하고, 경로/인자값타입 생략은 `..`으로 한다
+- Spring AOP는 public만 설정가능...
+
+```java
+@Around("execution([접근지정자] [리턴타입] [패키지].[클래스].[메소드]([인자값타입]))")
+```
+
+### PointCut 설정 - 메소드 분리
+
+- `@PointCut`을 사용해 정규표현식을 메소드로 분리하여 미리 정의할 수 있다.
+- 분리 메소드들은 하나의 클래스에 모아놓으면 깔끔하겠쥬?
+
+```java
+// ex)  public의 모든 리턴타입을 포함하는 
+//      ~kdt 패키지 하위의 Service 이름이 붙은 모든 클래스가 가지는 
+//      인자값은 상관없는 모든 메소드
+@PointCut("execution(public * org.prgrms.kdt..*Service.*(..))")
+public void servicePublicMethodPointCut(){};
+
+// 미리 정의된 PointCut 메소드 사용
+@Around("servicePublicMethodPointCut()")
+... Advice ...
+```
+
+### PointCut 설정 - 어노테이션 분리
+
+
+
+
+
+### Advice 설정
+
+- 위에서 `PointCut` 범위 내의 모든 `Target`들에게 적용될 `Advice` 로직을 써준다
+- `joinPoint.proceed()`는 `Target`의 리턴값이 됨
+
+```java
+@Around(정규표현식)
+public Object 메소드명(ProceedingJoinPoint joinPoint) throws Throwable {
+    var result = joinPoint.proceed();
+    return result;
+}
+```
+
+- 이제 `Target`으로 선정된 메소드가 실행될때마다 위에서 정의한 `Advice` 로직이 실행된다.
+- **단 `Bean`으로 등록된 객체만이 `Target`으로 지정된다**
