--- a/_posts/study/TIL/2021-08-27-21.md
+++ b/_posts/study/TIL/2021-08-27-21.md
@@ -118,7 +118,16 @@ public void servicePublicMethodPointCut(){};
 
 ### PointCut 설정 - 어노테이션 분리
 
+- PointCut을 경로로 설정하지 않고 특정 어노테이션으로 설정할 수 있다.
+- 해당 어노테이션이 붙은 메소들만이 `Target`으로 선정됨
 
+```java
+// 어노테이션 만들기
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.RUNTIME)
+public @interface TrackTime {
+}
+```
 
 
 
