--- a/_posts/study/TIL/2021-08-27-21.md
+++ b/_posts/study/TIL/2021-08-27-21.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스]"
+title:  "[데브코스] Spring AOP"
 date: 2021-08-27
 categories: 
   - TIL
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W4D5 - 
+W4D5 Part1 - Spring AOP 개념과 사용법에 대해 공부하자
 
 
 ## AOP(Aspect Orient Programming)
@@ -21,7 +21,6 @@ W4D5 -
 
 ### 기본 구조
 
-- [참고블로그(그림으로 이해)](https://velog.io/@max9106/Spring-AOP%EB%9E%80-93k5zjsm95){:target="_blank"}
 
 ![image](https://user-images.githubusercontent.com/71180414/131093439-92a801f6-ce51-4385-ad81-ab1fe4970362.png){:width="600"}
 
@@ -119,17 +118,20 @@ public void servicePublicMethodPointCut(){};
 ### PointCut 설정 - 어노테이션 분리
 
 - PointCut을 경로로 설정하지 않고 특정 어노테이션으로 설정할 수 있다.
-- 해당 어노테이션이 붙은 메소들만이 `Target`으로 선정됨
+- 해당 어노테이션이 **붙은 메소드**만이 `Target`으로 선정됨
 
 ```java
 // 어노테이션 만들기
 @Target(ElementType.METHOD)
 @Retention(RetentionPolicy.RUNTIME)
-public @interface TrackTime {
+public @interface 어노테이션명 {
 }
 ```
 
-
+```java
+@Around("@annotation(~패키지경로.어노테이션명)")
+... Advice ...
+```
 
 ### Advice 설정
 
@@ -146,3 +148,5 @@ public Object 메소드명(ProceedingJoinPoint joinPoint) throws Throwable {
 
 - 이제 `Target`으로 선정된 메소드가 실행될때마다 위에서 정의한 `Advice` 로직이 실행된다.
 - **단 `Bean`으로 등록된 객체만이 `Target`으로 지정된다**
+
+<br>
