--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -113,8 +113,6 @@ W1D1 - 이제 시작이다 !!
 
 |단축키|설명|
 |---|---|
-|psvm|public static void main 만들어줌|
-|sout|System.out.println|
 |Alt + Enter|수정 도우미|
 |Ctrl + Space|추천 도우미|
 |Shift + Shift|패키지 검색|
@@ -123,9 +121,10 @@ W1D1 - 이제 시작이다 !!
 |Ctrl + Alt + L|코드 정렬|
 |Shift + Tab|왼쪽 정렬|
 |Ctrl + Shift + Alt + T|리팩토링 메뉴(중요)|
-|Ctrl + Shift + A|액션 검색|
+|Ctrl + Alt + V|변수 리팩토링|
 |Alt + I (원래 insert)|오버라이딩 단축키(난 i로 바꿈)|
-
+|Ctrl + Shift + A|액션 검색|
+|Ctrl + F10|실행서버 옵션|
 
 <br>
 
