--- a/_posts/study/TIL/2021-08-27-22.md
+++ b/_posts/study/TIL/2021-08-27-22.md
@@ -119,8 +119,11 @@ public void 메소드(...){
 ### 문제 상황
 
 - `dirty reads` : `T1`이 데이터를 변경 후 `T2`에서 해당 데이터를 읽었는데 `T1`이 커밋되지 않으면 `T2`의 데이터는 의미가 없음
-- `non-repeatable reads` : `T1`이 데이터를 읽고있을 때 `T2`가 데이터를 변경 후 커밋하면 `T1`의 결과가 이상해짐
-- `phantom reads` : `T1`이 데이터에 접근해 첫번째 결과를 얻었는데, `T2`이 데이터에 접근해 변경해버린다면? <br> `T1`은 동일한 결과를 얻고자 데이터에 접근해도 첫번째 결과와 다른 결과를 얻게 됨
+    - 수정중인(커밋되지 않은) 데이터도 읽는 상황
+- `non-repeatable reads` : `T1`이 쿼리를 두번 수행하는데, 첫 쿼리 실행 후 `T2`가 데이터를 변경+커밋하면 `T1` 두번째 쿼리의 결과가 첫 쿼리와 다름
+    - 한 트랜잭션 내 동일한 쿼리의 결과가 비일관적인 상황
+- `phantom reads` : `T1`이 데이터에 접근해 첫번째 결과를 얻었는데, `T2`이 데이터에 접근해 삽입해 버린다면?<br> `T1`의 두번째 쿼리는 데이터가 추가된 결과를 얻게됨
+    - 두번째 쿼리에서 유령 레코드가 나타나는 현상
 
 ### 격리 수준
 
