--- a/_posts/study/TIL/2021-08-30-23.md
+++ b/_posts/study/TIL/2021-08-30-23.md
@@ -61,6 +61,7 @@ W5D1 - 웹 기본지식과 Servlet 기초 사용법에 대해 알아보자
 
 - [출처는 이곳!](https://litslink.com/blog/web-application-architecture)
 - `4` : OLTP
+- `5` : Redis 같은 메모리 기반 DB를 캐싱용으로 사용
 - `6` : 시간이 오래 걸리는 작업(압축)을 미리 저장하고 수행해주는 서버
 - `7` : 검색 전용 서버
 - `8` : 기존 서버의 서비스 로직을 `MSA` 구조로 나눌수도 있음
