--- a/_posts/study/TIL/2021-08-31-24.md
+++ b/_posts/study/TIL/2021-08-31-24.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W5D2 - DispatchServlet / JSP / Thymeleaf 에 대해 알아보자.
+W5D2 - DispatcherServlet / JSP / Thymeleaf 에 대해 알아보자.
 
 ## Spring MVC
 
