--- a/_posts/study/TIL/2021-09-01-26.md
+++ b/_posts/study/TIL/2021-09-01-26.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스] "
+title:  "[데브코스] Spring MVC 2"
 date: 2021-09-01
 categories: 
   - TIL
@@ -10,15 +10,19 @@ toc: false
 toc_sticky: false
 ---
 
-W5D3 - 
+W5D3 Part1 - MVC Form 처리 / WebApplicationContext 에 대해 알아보자!
 
 
 ## Form 처리
+
+추후작성
 
 <br>
 
 ## WebApplicationContext
 
+- 프로젝트 규모가 큰 `Monolithic` 아키텍처에서는 App Context를 분리해서 사용했음
+- Servlet과 App Context 간의 구조를 보고 코드에 적용해보자
 
 ### Servlet 구조
 
@@ -34,5 +38,68 @@ W5D3 -
     - 요청에 필요한 App Context만을 load하기 위해서
     - `Root App Context` : 서비스 로직과 관련된 Bean들을 정의. (부모)
     - `Servlet App Context` : 서블릿과 관련된 Bean을 정의. (자식)
-- 프로젝트 규모가 큰 `Monolithic` 아키텍처에서는 분리해서 사용
-- 프로젝트 규모가 작은 `MSA` 방식에서는 root App Context만 정의하기도 함
+- 요즘 프로젝트 규모가 작은 `MSA` 방식에서는 root App Context만 정의하기도 함
+
+<br>
+
+### Config Class 작성
+
+- 우선 App Context Config 파일을 Root와 Servlet으로 분리해야함
+
+<div class="sub_title">Servlet Config</div>
+
+```java
+@Configuration
+@EnableWebMvc
+@ComponentScan(basePackages = 패키지경로,
+        includeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, 
+        value = [포함할 컨트롤러].class),
+        useDefaultFilters = false
+)
+static class ServletConfig implements WebMvcConfigurer, ApplicationContextAware {
+    ...
+}
+```
+
+<div class="sub_title">Root Config</div>
+
+```java
+@Configuration
+@ComponentScan(basePackages = 패키지경로,
+        excludeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, 
+        value = [제외할 컨트롤러].class)
+)
+static class RootConfig {
+    ...
+}
+```
+
+### App Context 분리해서 등록하기
+
+- 설명은 주석으로!!
+
+```java
+@Override
+public void onStartup(ServletContext servletContext) {
+    logger.info("Starting Server ...");
+    // root App Context 객체 등록
+    var rootApplicationContext = new AnnotationConfigWebApplicationContext();
+    rootApplicationContext.register(RootConfig.class);
+    var loaderListener = new ContextLoaderListener(rootApplicationContext);
+    servletContext.addListener(loaderListener);
+
+    // Servlet App Context 등록
+    var applicationContext = new AnnotationConfigWebApplicationContext();
+    applicationContext.register(ServletConfig.class);
+    // 등록된 Servlet App Context로 dispatcherServlet 객체 생성
+    var dispatcherServlet = new DispatcherServlet(applicationContext);
+    // dispatcherServlet에 이름 지어주고 Servlet으로 등록 -> 도메인에 따라 여러개를 등록 가능
+    var servletRegistration = servletContext.addServlet("test", dispatcherServlet);
+    servletRegistration.addMapping("/");
+    // -1 일경우 servlet context는 로드되지 않다가, api 요청이 왔을때 비로소 켜진다
+    servletRegistration.setLoadOnStartup(-1);   
+}
+```
+
+<br>
+
